fix alignment of player-name-col

--- a/styles.css
+++ b/styles.css
@@ -136,17 +136,21 @@ input[class=gender] {
     grid-template-rows: max-content repeat(24, 1fr);
 }
 
+.player-names-container {
+    border-right: 2px solid black;
+    border-bottom: 2px solid black;
+    display: grid;
+    grid-template-rows: repeat(2, 1fr);
+}
+
 input[class=player-name] {
     font-size: .8rem;
     border-bottom: 1px solid black;
-    border-right: 2px solid black;
     padding-left: 5px;
 }
 
 input[class=player2-name] {
     font-size: .8rem;
-    border-bottom: 2px solid black;
-    border-right: 2px solid black;
     background-color: lightgrey;
     padding-left: 5px;
 }
